--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,6 @@
 [versions]
-com-android-application = "8.1.0-alpha10"
+com-android-application = "8.1.0-alpha11"
+oauth = "5.4.0"
 org-jetbrains-kotlin-android = "1.8.0"
 core-ktx = "1.9.0"
 junit = "4.13.2"
@@ -8,6 +9,8 @@ espresso-core = "3.5.1"
 appcompat = "1.6.1"
 material = "1.8.0"
 constraintlayout = "2.1.4"
+play-services-auth = "20.4.1"
+v2-user = "2.13.0"
 
 [libraries]
 core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "core-ktx" }
@@ -17,6 +20,13 @@ espresso-core = { group = "androidx.test.espresso", name = "espresso-core", vers
 appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
+oauth = { module = "com.navercorp.nid:oauth", version.ref = "oauth" }
+play-services-auth = { module = "com.google.android.gms:play-services-auth", version.ref = "play-services-auth" }
+retrofit = { group = "com.squareup.retrofit2", name = "retrofit", version = "2.9.0" }
+converter-gson = { group = "com.squareup.retrofit2", name = "converter-gson", version = "2.9.0" }
+gson = { group = "com.google.code.gson", name = "gson", version = "2.10.1" }
+converter-scalars = { group = "com.squareup.retrofit2", name = "converter-scalars", version = "2.9.0" }
+v2-user = { module = "com.kakao.sdk:v2-user", version.ref = "v2-user" }
 
 [plugins]
 com-android-application = { id = "com.android.application", version.ref = "com-android-application" }
