--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -27,6 +27,7 @@ converter-gson = { group = "com.squareup.retrofit2", name = "converter-gson", ve
 gson = { group = "com.google.code.gson", name = "gson", version = "2.10.1" }
 converter-scalars = { group = "com.squareup.retrofit2", name = "converter-scalars", version = "2.9.0" }
 v2-user = { module = "com.kakao.sdk:v2-user", version.ref = "v2-user" }
+play-services-location = { group = "com.google.android.gms", name = "play-services-location", version = "21.0.1" }
 
 [plugins]
 com-android-application = { id = "com.android.application", version.ref = "com-android-application" }
